--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-image: url("./images//fondoo.jpg"); 
+  background-image: url("./images/fondoo.jpg"); 
   background-position: center;
   background-size:auto;
   }
